<resources>
    <string name="app_name">Away</string>
    <string name="connexion_title">Connection</string>
    <string name="connexion_create_account">Create account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="account">Account</string>
    <string name="country">Country</string>
    <string name="country_info">Country Info</string>
    <string name="search">Search</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="country_from">Country of origin</string>
    <string name="email_account">E-mail*</string>
    <string name="password_account">Password*</string>
    <string name="mandatory">* Mandatory</string>
    <string name="wrong_email">Wrong e-mail</string>
    <string name="wrong_pwd">Wrong password</string>
    <string name="required">Required field</string>
    <string name="connect">You are connected</string>
    <string name="subscribe">You are registered</string>
    <string name="fail">Connection issue</string>
    <string name="saved">Modification done</string>
    <string name="update">Update</string>
    <string name="friends">Friends</string>
    <string name="event_passed">Event passed :</string>
    <string name="next_event">Next event :</string>
    <string name="created_event">Created event :</string>
    <string name="event_participants">Participant(s) :</string>
    <string name="join">Join</string>
    <string name="quit">Quit</string>
    <string name="default_lorem" translatable="false">Lorem ipsum dolor sit amet, tortor vestibulum facilisi risus in, phasellus wisi donec in tempus adipisci, diam vitae rutrum viverra in luctus, adipiscing erat non mollis nunc nam nulla. Justo in. Dui sem aliquam nulla vitae nec fringilla. Velit mauris vestibulum eget, vestibulum maecenas, sed pede etiam cras porta pharetra nullam, donec dui integer. Malesuada laoreet lacus interdum, suspendisse erat nec non blandit mauris. Suscipit molestie. Maecenas lorem pulvinar elementum semper quisque, integer ac pede dignissim metus venenatis, gravida mauris donec lorem faucibus orci, commodo nam convallis platea accumsan morbi.</string>
    <string name="little_lorem" translatable="false">Lorem ipsum dolor sit amet, tortor vestibulum facilisi risus in, phasellus wisi donec in tempus adipisci, diam vitae rutrum viverra in luctus, adipiscing erat non mollis nunc nam nulla. </string>
    <string name="by">By :</string>
    <string name="country_text">Where want to go you?</string>
    <string name="search_text">Use the search bar !</string>
    <string name="tag_detailed_search_text">Activities matching the TAG : </string>
    <string name="activity">Activity</string>
    <string name="date">Date</string>
    <string name="add_tag">Add to tags</string>
    <string name="remove_tag">Remove to tags</string>
    <string name="creation_text">Event creation</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="select">Select</string>
    <string name="select_place">Select a place</string>
    <string name="select_tag">Select a Tag</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="selected_date">Selected date :</string>
    <string name="time">Time</string>
    <string name="delete_text">Delete ?</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added">added</string>
    <string name="already_added">already added</string>
    <string name="tag_warning">You must have at least one Tag</string>
    <string name="tag_three_warning">You must have at least one Tag</string>
    <string name="error_retry">Error, please retry</string>
    <string name="error_reload">Error, please reload</string>
    <string name="params">Params</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome to AWAY, to finalise your account you need to provide at least three TAG !\n You can use the search bar to find what you want !</string>
    <string name="error_city">Select a city</string>
    <string name="empty">empty</string>
    <string name="missing">missing</string>
    <string name="selected_activity_text">Selected activity :</string>
    <string name="error_date">Wrong Date</string>
    <string name="not_found">No result</string>
    <string name="country_info_sub">Find by categories the information we collected about your country of destination</string>
    <string name="image_saved">Image saved</string>
    <string name="update_success">Update saved</string>
</resources>