<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragmentMenu"
        android:checked="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/eventsFragmentMenu"
        android:icon="@drawable/event"
        android:title="@string/event"/>
    <item
        android:id="@+id/createFragmentMenu"
        android:icon="@drawable/add"
        android:title="@string/create"/>
    <item
        android:id="@+id/accountFragmentMenu"
        android:icon="@drawable/account"
        android:title="@string/account"/>
    <item
        android:id="@+id/countryFragmentMenu"
        android:icon="@drawable/flag"
        android:title="@string/country"/>

</menu>