<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.away_expat.away.fragments.AccModifFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/account_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="john.smith@email.com"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_input_email"
        android:layout_alignBottom="@+id/account_input_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:text="@string/email_account"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_input_password"
        android:layout_alignBottom="@+id/account_input_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:text="@string/password_account"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/account_input_password"
        android:layout_marginTop="27dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/account_input_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="Smith"
        android:inputType="textPersonName"
        android:layout_marginRight="15dp" />

    <EditText
        android:id="@+id/account_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/account_input_email"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="********"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/account_input_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/account_input_lastname"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="John"
        android:inputType="textPersonName"
        android:layout_marginRight="15dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_input_firstname"
        android:layout_alignBottom="@+id/account_input_firstname"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_input_birthdate"
        android:layout_alignBottom="@+id/account_input_birthdate"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:text="@string/birth_date" />

    <EditText
        android:id="@+id/account_input_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/account_input_firstname"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="01/01/1990"
        android:inputType="date" />

    <Spinner
        android:id="@+id/account_input_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_input_birthdate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/account_input_birthdate"
        android:layout_below="@+id/account_input_birthdate"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/account_input_country"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:text="@string/country_from" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="36dp"
        android:text="@string/mandatory" />

</RelativeLayout>
